I don't know what I did, but it works now, with a set --workdir in fragpipe: 1) It might be the unique combination of setup options are great. 2) It might be because some of the earlier messy outputs from running with workdir . gave a helping hand. 3) Or it may fail in 5 seconds. Let's see :)

--- a/profiles/slurm-sigma2-saga/config.yaml
+++ b/profiles/slurm-sigma2-saga/config.yaml
@@ -37,7 +37,7 @@ cluster:
     --parsable
     --cpus-per-task={threads}
     --mem={resources.mem_mb}
-    --job-name=st-{rule}_{wildcards}
+    --job-name=ms-{rule}_{wildcards}
     --output=logs/%j-{jobid}-{rule}.out.log
     --error=logs/%j-{jobid}-{rule}.err.log
     --time={resources.runtime}
