--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,5 @@
-# Nesvilab doesn't like to make software freely available, so you have to specify the paths to philosopher and MSFragger
 
-
-
+# Define paths to binaries and jar files
 philosopher_executable: "/cluster/projects/nn9864k/cmkobel/02_proteomics/bin/philosopher_v4.8.1_linux_amd64/philosopher"
 msfragger_jar: "/cluster/projects/nn9864k/cmkobel/02_proteomics/bin/MSFragger-3.7/MSFragger-3.7.jar"
 ionquant_jar: "/cluster/projects/nn9864k/cmkobel/02_proteomics/bin/IonQuant-1.8.10/IonQuant-1.8.10.jar"
@@ -13,18 +11,14 @@ fragpipe_executable: "/cluster/projects/nn9864k/cmkobel/02_proteomics/bin/FragPi
 # database_glob points to the database that the targets are made of. We can only search for proteins that we already know. I wonder if that is why we're doing transcriptomics, because we don't know how the DNA is redundantly translated?
 # samples is a dictionary that points to all the samples within 
 batch_parameters:
-
-
   "minimal": # This batch is purely for developing and debugging the pipeline.
-    #d_base: "/trd-project2/NS9864K/datasets/2021_supacow/2022-05-06_PEP_timsTOF_D--T6S_24_andpuchun36/timsTOF/20220525_CMK"
-    d_base: "data_mirror"
+    d_base: "data_mirror/2022-05-06_PEP_timsTOF_D--T6S_24_andpuchun36"
     database_glob: "/cluster/projects/nn9864k/cmkobel/02_proteomics/aa_databases/07_puchun_minimal/*.faa"
     samples: 
       'D42': '20220506_D10_Slot1-46_1_1984.d'     # D10
       #'D45': '20220506_D12_Slot1-48_1_1986.d'     # D12
       'P24': '20220506_C1_Slot1-25_1_1963.d'      # C 1
       # Save this one as a test dataset. Can't be shared publicly though
-
 
 
 
