--- a/config.yaml
+++ b/config.yaml
@@ -21,8 +21,42 @@ batch_parameters:
       # Save this one as a test dataset. Can't be shared publicly though
 
 
+  # Supacow Digesta timepoint 6 - With Puchun and Yanna
+  "220506_DnnT6S_carl": # This batch is purely for developing and debugging the pipeline.
+    d_base: "data_mirror/2022-05-06_PEP_timsTOF_D--T6S_24_andpuchun36" # copy of /trd-project2/NS9864K/datasets/2021_supacow/2022-05-06_PEP_timsTOF_D--T6S_24_andpuchun36/timsTOF/20220525_CMK/*
+    database_glob: "/cluster/projects/nn9864k/cmkobel/02_proteomics/aa_databases/08_yannas/finaldb/*.faa"
+    samples: 
+      'D01T6S': '20220506_C9_Slot1-33_1_1971.d'      # C 9
+
+      'D02T6S': '20220506_C11_Slot1-35_1_1973.d'     # C11
+      'D06T6S': '20220506_C12_Slot1-36_1_1974.d'     # C12
+      
+      #'unknown': '20220506_D1_Slot1-37_1_1975.d'     # D 1
+      'D08T6S': '20220506_D2_Slot1-38_1_1976.d'      # D 2
+      'D15T6S': '20220506_D3_Slot1-39_1_1977.d'      # D 3
+      'D16T6S': '20220506_D4_Slot1-40_1_1978.d'      # D 4
+      'D21T6S': '20220506_D5_Slot1-41_1_1979.d'      # D 5
+      'D25T6S': '20220506_D6_Slot1-42_1_1980.d'      # D 6
+      'D28T6S': '20220506_D7_Slot1-43_1_1981.d'      # D 7
+      'D29T6S': '20220506_D8_Slot1-44_1_1982.d'      # D 8
+      'D35T6S': '20220506_D9_Slot1-45_1_1983.d'      # D 9
+      'D42T6S': '20220506_D10_Slot1-46_1_1984.d'     # D10
+      'D43T6S': '20220506_D11_Slot1-47_1_1985.d'     # D11
+      'D45T6S': '20220506_D12_Slot1-48_1_1986.d'     # D12
+      
+      'D48T6S': '20220506_E1_Slot1-49_1_1987.d'      # E 1
+      'D51T6S': '20220506_E2_Slot1-50_1_1988.d'      # E 2
+      'D55T6S': '20220506_E3_Slot1-51_1_1989.d'      # E 3
+      'D59T6S': '20220506_E4_Slot1-52_1_1990.d'      # E 4
+      'D60T6S': '20220506_E5_Slot1-53_1_1991.d'      # E 5
+      'D61T6S': '20220506_E6_Slot1-54_1_1992.d'      # E 6
+      'D63T6S': '20220506_E7_Slot1-55_1_1993.d'      # E 7
+      'D67T6S': '20220506_E8_Slot1-56_1_1994.d'      # E8
+      'D75T6S': '20220506_E9_Slot1-57_1_1995.d'      # E9
+      'D76T6S': '20220506_E10_Slot1-58_1_1996.d'     # E10
+
 
 # Pick a title below
 
-batch: "minimal"
+batch: "220506_DnnT6S_carl"
 
