--- a/profiles/slurm-sigma2-saga/config.yaml
+++ b/profiles/slurm-sigma2-saga/config.yaml
@@ -51,7 +51,7 @@ cluster:
 default-resources:
   - mem_mb=1024
   #- disk_mb=1024 # saga doesn't care
-  - runtime='12:00:00'
+  - runtime='12h'
   - tmpdir='$SCRATCH'
   - partition=normal
   
