--- a/config_template.yaml
+++ b/config_template.yaml
@@ -22,12 +22,13 @@ batch_parameters:
 
 
   # Supacow Digesta timepoint 6 - With Puchun and Yanna
-  "220506_DnnT6S_carl": # This batch is purely for developing and debugging the pipeline.
+  "220506_run_digesta_slaughter": # This batch is purely for developing and debugging the pipeline.
     d_base: "data_mirror/2022-05-06_PEP_timsTOF_D--T6S_24_andpuchun36" # copy of /trd-project2/NS9864K/datasets/2021_supacow/2022-05-06_PEP_timsTOF_D--T6S_24_andpuchun36/timsTOF/20220525_CMK/*
-    database_glob: "/cluster/projects/nn9864k/cmkobel/02_proteomics/aa_databases/08_yannas/finaldb/*.faa"
+    #database_glob: "/cluster/projects/nn9864k/cmkobel/02_proteomics/aa_databases/08_yannas/finaldb/*.faa"
+    database_glob: "/cluster/projects/nn9864k/cmkobel/02_proteomics/aa_databases/10_supacow/concatenate1/*" A-F, all of them
     samples: 
       'D01T6S': '20220506_C9_Slot1-33_1_1971.d'      # C 9
-
+      #                                               # C10
       'D02T6S': '20220506_C11_Slot1-35_1_1973.d'     # C11
       'D06T6S': '20220506_C12_Slot1-36_1_1974.d'     # C12
       
@@ -51,8 +52,8 @@ batch_parameters:
       'D60T6S': '20220506_E5_Slot1-53_1_1991.d'      # E 5
       'D61T6S': '20220506_E6_Slot1-54_1_1992.d'      # E 6
       'D63T6S': '20220506_E7_Slot1-55_1_1993.d'      # E 7
-      'D67T6S': '20220506_E8_Slot1-56_1_1994.d'      # E8
-      'D75T6S': '20220506_E9_Slot1-57_1_1995.d'      # E9
+      'D67T6S': '20220506_E8_Slot1-56_1_1994.d'      # E 8
+      'D75T6S': '20220506_E9_Slot1-57_1_1995.d'      # E 9
       'D76T6S': '20220506_E10_Slot1-58_1_1996.d'     # E10
 
 
